--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/EAStogov/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/EAStogov/express-mesto-gha#readme",
+  "homepage": "./",
   "devDependencies": {
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
