--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/EAStogov/express-mesto-gha/issues"
   },
-  "homepage": "./",
+  "homepage": "http://api.esto.mesto.nomoredomains.xyz",
   "devDependencies": {
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
